--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -71,6 +71,7 @@
 
 .navbar-right ul img {
     width: 40px;
+    height: 40px;
     border-radius: 50%;
     padding-top: 3px;
     cursor: pointer;
