--- a/frontend/src/Pages/SpecificNews.css
+++ b/frontend/src/Pages/SpecificNews.css
@@ -141,6 +141,12 @@
     margin: 0 auto;
 }
 
+
+.specificPara a {
+    color: blue;
+    cursor: pointer;
+}
+
 /* -------------------------------------------- Media Queries */
 
 @media (max-width:1100px) {
