--- a/frontend/src/Components/Logo.css
+++ b/frontend/src/Components/Logo.css
@@ -122,8 +122,20 @@
 }
 
 @media (max-width: 462px) {
-    .logoInner {
-        width: 50vw;
+    .logo h2 {
+        font-size: 33px;
+    }
+}
+
+@media (max-width: 441px) {
+    .logo h2 {
+        font-size: 31px;
+    }
+}
+
+@media (max-width: 420px) {
+    .logo h2 {
+        font-size: 29px;
     }
 }
 
@@ -147,7 +159,8 @@
 
 
 @media (max-width: 345px) {
-    .logoInner {
-        width: 50vw;
+
+    .logo h2 {
+        font-size: 22px;
     }
 }
