Here update css for icon.

--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -311,9 +311,10 @@
     }
 
     .navbar-center ul li .socialMediaIconx i {
-        margin: 0px 4px;
+        margin: 3px 4px;
         background-color: #02384d;
         color: white;
+        display: inline-block;
     }
 
 }
