Here we update the code according to mobile view.

--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -228,7 +228,8 @@
     }
 
     .navbar-center ul li {
-        margin-top: 25px;
+        /* margin-top: 25px; */
+        margin-top: 2.5vh;
         margin-left: 70px;
         display: block;
     }
