--- a/frontend/src/Components/Footer.css
+++ b/frontend/src/Components/Footer.css
@@ -83,6 +83,17 @@
 }
 
 
+.footerSocialIcon {
+    margin-left: 20px;
+    margin-top: 40px;
+}
+
+.footerSocialIcon a {
+    margin-right: 15px;
+    font-size: 20px;
+}
+
+
 /* ---------------------- Media Queries */
 
 @media (max-width:1100px) {
