--- a/frontend/src/Components/AdSection.css
+++ b/frontend/src/Components/AdSection.css
@@ -7,13 +7,29 @@
     margin-top: 20px;
     overflow: hidden;
     position: relative;
+    /* background-color: red; */
+}
+
+.adSection .adBtn {
+    background-color: #011E29;
+    height: 40px;
+    width: 40px;
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.adSection .adBtn:hover {
+    background-color: red;
 }
 
 .slider {
     display: flex;
-    width: 100%;
+    width: 950px;
     /* height: 100%; */
     transition: transform 0.5s ease-in-out;
+    /* background-color: blue; */
+    overflow: hidden;
 }
 
 .slide {
@@ -23,6 +39,11 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    /* transition: transform 1s ease-in-out; */
+}
+
+.slide a {
+    position: relative;
 }
 
 .slide a img {
@@ -31,6 +52,25 @@
     /* object-fit: cover; */
     border-radius: 10px;
     cursor: pointer;
+}
+
+.slide .adImageBtn {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    right: 2px;
+    /* filter: blur(10px); */
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 20px;
+    z-index: 100;
+    width: 100%;
+    color: white;
+    height: 80px;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    word-spacing: 4px;
 }
 
 
@@ -52,23 +92,68 @@
 @media (max-width:600px) {
 
     .adSection {
-        height: 450px;
+        height: 500px;
+        position: relative;
     }
 
     .slide a img {
         width: 400px;
         height: 430px;
     }
+
+    .adSection .adBtn {
+        height: 30px;
+        width: 30px;
+        padding: 7px;
+    }
+
+    .adSection .adBtn:hover {
+        background-color: #011E29;
+    }
+
+    .adSection #backIcon {
+        position: absolute;
+        bottom: 0px;
+        left: 40%;
+        z-index: 100;
+    }
+
+    .adSection #nextIcon {
+        position: absolute;
+        bottom: 0px;
+        right: 40%;
+    }
+
+    .slide .adImageBtn {
+        font-size: 17px;
+        height: 40px;
+    }
+
+
 }
 
 @media (max-width:410px) {
 
     .adSection {
-        height: 400px;
+        height: 470px;
+        margin-top: 00px;
     }
 
     .slide a img {
         width: 330px;
         height: 400px;
+    }
+
+    .adSection #backIcon {
+        position: absolute;
+        bottom: 0px;
+        left: 40%;
+        z-index: 100;
+    }
+
+    .adSection #nextIcon {
+        position: absolute;
+        bottom: 0px;
+        right: 40%;
     }
 }
