--- a/frontend/src/Pages/AdminPage.css
+++ b/frontend/src/Pages/AdminPage.css
@@ -45,6 +45,7 @@
 
 @media (max-width:450px) {
     h1 {
-        font-size: 15px;
+        font-size: 18px;
+        margin-bottom: 18px;
     }
 }
